--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -10,7 +10,7 @@
             </a>       
             
             <!-- TOGGLE -->
-            <button class="navbar-toggler shadow-none border-0 hide-header" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -27,13 +27,23 @@
                 <!-- SIDEBAR BODY -->
                 <div class="offcanvas-body flex-lg-rowp-lg-0 hide-header">
                     <ul class="navbar-nav justify-content-end align-items-center fs-5 flex-grow-1 pe-3">
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="">
-                                <span class="text">Edições</span>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#1">
+                                <span class="text">Apresentação</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#s6">
+                            <a class="nav-link" href="#s2">
+                                <span class="text">Comissão</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#s3">
+                                <span class="text">Normas</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#s4">
                                 <span class="text">Anais</span>
                             </a>
                         </li>
@@ -43,23 +53,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#s2">
-                                <span class="text">Normas</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#s4">
-                                <span class="text">Equipe</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#s3">
-                                <span class="text">Áreas</span>
-                            </a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="#s1">
-                                <span class="text">Início</span>
+                            <a class="nav-link" href="">
+                                <span class="text">Edições</span>
                             </a>
                         </li>
                     </ul>
