--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -86,41 +86,62 @@ header {
     padding: 15px 0;
     position: fixed;
     z-index: 1000000;
+    transition: 1s all;
+}
+
+header li {
+    padding: 1%;
     transition: 1s;
 }
 
 header a img {
     opacity: 0;
+    transition: 1s;
 }
 
-header.rolagem {
+header.rolagem,
+header.rolagem li {
+    transition: 1s;
     background-color: black;
-    height: 8vh;
+    padding: 0 0.5%;
+}
+
+header.rolagem li a {
+    font-weight: 400;
 }
 
 header.rolagem a img,
 header.rolagem a {
+    transition: 1s;
     opacity: 1;
+}
+
+.navbar {
+    padding: 3px;
 }
 
 .navbar-nav li a {
     font-weight: 500;
+    transition: 0.5s all;
 }
 
-nav ul li a .text {
-    color: #efefef;
-    transition: 0.6s;
+.navbar a {
+    display: inline-block;
 }
 
-nav ul li:hover a .text {
-    transform: translateY(15px);
+.navbar a:hover {
+    transform: translateY(-4px);
     color: var(--cyan);
     filter: drop-shadow(0 0 5px rgba(100, 100, 255, 0.525)) drop-shadow(0 0 5px var(--cyan));
-    transition: 0.6s;
+}
+
+.navbar a.active,
+.navbar a:active {
+    color: var(--cyan);
 }
 
 /* ----- VÍDEO/IMAGEM FUNDO ----- */
-.s1 {
+#s1 {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
         url(../images/fundo_if.png);
     background-repeat: no-repeat;
@@ -129,6 +150,10 @@ nav ul li:hover a .text {
 }
 
 /* ----- BLOCO A ESQUERDA ----- */
+.s1 {
+    flex-direction: row;
+}
+
 .comtainer {
     width: 32%;
     background: rgba(86, 86, 86, 0.4);
@@ -141,12 +166,12 @@ nav ul li:hover a .text {
 
 .btn,
 .front a,
-.s4 a {
+.s2 a {
     color: #fff;
 }
 
 .front button,
-.s4 button {
+.s2 button {
     transition-property: all;
     transition-duration: .6s;
     transition-timing-function: ease;
@@ -160,7 +185,7 @@ nav ul li:hover a .text {
 }
 
 .front button:hover,
-.s4 button:hover {
+.s2 button:hover {
     border: 1px solid;
     box-shadow: inset 0 0 12px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
     outline-color: rgba(255, 255, 255, 0);
@@ -177,20 +202,6 @@ nav ul li:hover a .text {
 
 .s1 div:nth-child(2) p {
     text-align: justify;
-}
-
-/* ----- ÁREAS TEMÁTICAS ----- */
-#s3 .areas {
-    width: 100%;
-    height: 100%;
-    background-color: #111;
-}
-
-#s3 .areas h4 {
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 150%;
 }
 
 /* ----- INFORMAÇÕES ----- */
@@ -231,7 +242,7 @@ nav ul li:hover a .text {
 
 /* ----- CONTATO ----- */
 .contato-box,
-#s6 {
+#s5 {
     background: #D9D9D9;
 }
 
@@ -303,14 +314,20 @@ nav ul li:hover a .text {
     }
 }
 
-#s2 a {
+#s3 a {
     -webkit-transition: .5s all ease;
     -o-transition: .5s all ease;
     transition: .5s all ease;
 }
 
-#s2 {
-    background-color: var(--lgreen);
+#s3 table {
+    width: 75%;
+    overflow: hidden;
+    border: solid transparent 1px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    transition: 1s all;
 }
 
 .custom-table {
@@ -462,9 +479,46 @@ nav ul li:hover a .text {
 
 }
 
+#header .container,
+#header .container-md,
+#header .container-sm {
+    max-width: 100%;
+}
+
 /* Medium diveces */
 @media (max-width: 991px) {
-    section #s6 {
+
+    #s1 a .m-1 {
+        margin: 0;
+        margin-bottom: 3% !important;
+    }
+
+    .s1 {
+        flex-direction: column;
+    }
+
+    #s1 img {
+        width: 30%;
+    }
+
+    #s1 p {
+        font-size: 90%;
+    }
+
+    #s1 a {
+        margin-bottom: 5px;
+    }
+
+    .front {
+        padding-top: 10%;
+    }
+
+    .comtainer {
+        width: 100%;
+        height: 0%;
+    }
+
+    section #s5 {
         min-width: none;
     }
 
@@ -517,7 +571,6 @@ nav ul li:hover a .text {
         background-color: black;
         padding: 0;
         margin: 0;
-        height: 8vh;
     }
 
     header.rolagem a img,
