WIP: adicionando pacotes e refatorando código

--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -6,7 +6,7 @@
     <!-- Basic -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EXPOTEC {% block title %}{% endblock title %}</title>
+    <title>{{ evento.nome_curto }} {% block title %}{% endblock title %}</title>
     <link rel="icon" href="{% static 'images/favicon.ico' %}">
     
     <!-- CSS -->
